Fixed the overflow and padding

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -961,9 +961,9 @@ label {
     width: 100%;
     height: auto;
     flex-direction: column;
-    gap: 1.5rem;
-    padding-bottom: 5rem;
-    margin-bottom: 3rem;
+    gap: 1rem;
+    padding-bottom: 3rem;
+    margin-bottom: 1.5rem;
     .dropdown {
       align-self: center;
       margin-bottom: 7rem;
@@ -975,11 +975,9 @@ label {
     .compatibility-div,
     .tech-div {
       display: grid;
-      grid-template-columns: 1fr 1fr;
       label {
         margin: 0;
       }
-      row-gap: 2rem;
       column-gap: 2rem;
       .open-service-mesh {
         grid-row: 4/5;
@@ -1000,6 +998,22 @@ label {
     }
   }
 }
+@media screen and (max-width:770px) and  (min-width:450px){
+  .category-div,
+  .compatibility-div,
+  .tech-div {
+    row-gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width:450px) {
+  .category-div,
+  .compatibility-div,
+  .tech-div {
+    row-gap: 1rem;
+  }
+}
+
 @media screen and (max-width: 644px) {
   .modal-image {
     width: 230px;
